# itscam-sdk

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.en-US.md  README.md
.github/workflows/: codegen-check.yml  docs.yml  sdk-release.yml
core/: CMakeLists.txt  Makefile  itscam_client.h  itscam_os.h  itscam_rest_client.cpp  itscam_rest_client.h  itscam_sdk.h  itscam_types.h
core/c_api/: itscam_sdk_c.cpp
docs/: README.en-US.md  README.md  adding-a-new-wrapper.en-US.md  adding-a-new-wrapper.md  codegen.en-US.md  codegen.md  error-handling.en-US.md  error-handling.md  getting-started.en-US.md  getting-started.md  https-tls.en-US.md  https-tls.md  jpeg-metadata.en-US.md  jpeg-metadata.md  metadata-visualizer.en-US.md  metadata-visualizer.md  migration-cougar.en-US.md  migration-cougar.md  overview.en-US.md  overview.md
docs-site/: .gitignore  README.en-US.md  README.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/.vitepress/theme/: AiSearchSnippets.vue  AssistantPage.vue  Layout.vue  MetadataVisualizer.vue  custom.css  index.ts  useAiSearchScript.ts
docs-site/scripts/: corpus-manifest.mjs  stage-corpus.mjs  sync-ai-search.mjs  sync-content.mjs
docs/api/: binary-client.en-US.md  binary-client.md  cgi-client.en-US.md  cgi-client.md  rest-client.en-US.md  rest-client.md
docs/tutorials/: first-image-cpp.md  first-image-csharp.md  first-image-go.md  first-image-java.md  first-image-nodejs.md  first-image-python.md
docs/wrappers/: cpp.en-US.md  cpp.md  csharp.en-US.md  csharp.md  go.en-US.md  go.md  java.en-US.md  java.md  nodejs.en-US.md  nodejs.md  python.en-US.md  python.md
examples/: Makefile  itscam_rest_example.cpp  itscam_trigger_recorder.cpp
src/core/: CMakeLists.txt  Makefile  itscam_cgi_client.cpp  itscam_cgi_client.h  itscam_client.cpp  itscam_client.h  itscam_jpeg_utils.h  itscam_os.h  itscam_rest_client.cpp  itscam_rest_client.h  itscam_rest_types.h  itscam_rest_types.hpp  itscam_sdk.h  itscam_sdk_utils.h  itscam_types.h
src/core/c_api/: itscam_cgi_client_c.cpp  itscam_cgi_client_c.h  itscam_rest_client_c.cpp  itscam_rest_client_c.h  itscam_sdk_c.cpp  itscam_sdk_c.h
src/core/c_api/impl/: itscam_c_internal.h
src/core/impl/: itscam_http_transport.cpp  itscam_http_transport.h  itscam_mingw_stl_sync.h  itscam_mingw_stl_sync.hpp  itscam_multipart.cpp  itscam_multipart.h  itscam_os_linux.cpp  itscam_os_linux_fs.cpp  itscam_os_windows.cpp  itscam_os_windows_fs.cpp  itscam_sdk_utils_linux.cpp  itscam_sdk_utils_windows.cpp
src/examples/: Makefile  README.md  itscam_cgi_example.cpp  itscam_rest_example.cpp  itscam_sdk_example.cpp  itscam_snapshot_to_freeflow.cpp  itscam_trigger_recorder.cpp
src/wrappers/csharp/: Directory.Build.props  Directory.Build.targets  Itscam.Sdk.sln  README.md
src/wrappers/csharp/Itscam.Sdk/: BinaryClientCallbacks.cs  Exceptions.cs  Itscam.Sdk.csproj  ItscamCgiClient.cs  ItscamClient.cs  ItscamRestClient.cs  JpegUtils.cs  Types.cs
src/wrappers/csharp/Itscam.Sdk/Native/: NativeMethods.cs
src/wrappers/csharp/Itscam.Sdk/RestTypes/: RestTypes.g.cs
src/wrappers/csharp/examples/BinaryCaptureExample/: BinaryCaptureExample.csproj  Program.cs
src/wrappers/csharp/examples/CaptureExample/: CaptureExample.csproj  Program.cs
src/wrappers/csharp/examples/MjpegGrabberExample/: Program.cs
src/wrappers/csharp/examples/ProfileConfigExample/: ProfileConfigExample.csproj  Program.cs
src/wrappers/csharp/examples/SoftwareTriggerSnapshotExample/: Program.cs
src/wrappers/go/: README.md  go.mod
src/wrappers/go/examples/: capture_example.go  cgi_snapshot_example.go  rest_example.go
src/wrappers/go/examples/gui/: README.md  build-linux.sh  build-windows.sh  go.mod  main.go
src/wrappers/go/examples/gui/frontend/: app.js  index.html
src/wrappers/go/examples/gui/frontend/wailsjs/go/main/: App.d.ts
src/wrappers/go/itscam/: callbacks.go  cgi_client.go  client.go  errors.go  jpeg_utils.go  rest_client.go  rest_types.go  types.go  utils.go
src/wrappers/java/: README.md  pom.xml
src/wrappers/java/examples/: pom.xml
src/wrappers/java/itscam-sdk/: pom.xml
src/wrappers/java/itscam-sdk/src/main/java/com/pumatronix/itscam/: AutoReconnectConfig.java  CaptureResult.java  CaptureSubscriptionConfig.java  CgiImage.java  CgiStreamFrame.java  ConnectionState.java  ErrorCode.java  EventSubscription.java  Sdk.java  (+17 more)
src/wrappers/nodejs/: README.md  package-lock.json  package.json
src/wrappers/nodejs/examples/: capture-example.js  cgi-snapshot-example.js  rest-example.js
src/wrappers/nodejs/src/: errors.js  index.js  itscam-cgi-client.js  itscam-client.js  itscam-rest-client.js  jpeg-utils.js  native.js  utils.js
src/wrappers/nodejs/types/: index.d.ts
src/wrappers/python/: README.md  setup.py
src/wrappers/python/examples/: capture_example.py  cgi_snapshot_example.py  rest_example.py  snapshot_to_freeflow_example.py
src/wrappers/python/itscam/: __init__.py  bindings.py  cgi_client.py  client.py  jpeg_utils.py  rest_client.py  rest_types.py  types.py  utils.py
tools/: check-glibc.sh  qemu-smoke.sh
tools/codegen/: README.md  codegen.mjs  package-lock.json  package.json  postprocess.mjs
tools/codegen/spec/: default.yaml  itscam-1.0.0-12f96a13.yaml
tools/codegen/spec/daemon-fixtures/: api_common.yaml  api_service_lanes.yaml
tools/docker/: entrypoint.sh
tools/docs/: Doxyfile  docfx-filter.yml  docfx.json  unwrap-markdown.mjs
tools/docs/docfx-content/: index.md
tools/packaging/: README.md  make-sdk-dist.sh  npm-pack-versioned.sh  stage-java-natives.sh  stage-nodejs-natives.sh
tools/regression/: run-examples.sh
tools/version/: README.md  gen-version.sh
wrappers/go/examples/gui/: README.md  app.go  build-linux.sh  build-windows.sh  wails.json
wrappers/go/examples/gui/frontend/: styles.css
wrappers/go/examples/gui/frontend/wailsjs/go/: models.ts
wrappers/go/examples/gui/frontend/wailsjs/go/main/: App.js
wrappers/go/itscam/: callbacks.go  client.go  types.go
wrappers/python/examples/: capture_example.py
wrappers/python/itscam/: __init__.py  bindings.py  types.py
(+36 files in other folders)
